--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.6.1",
     "angular-animate": "^1.6.1",
     "angular-aria": "^1.6.1",
+    "angular-cookies": "^1.6.1",
     "angular-material": "^1.1.1",
     "angular-material-data-table": "^0.10.10",
     "angular-ui-router": "^1.0.0-rc.1"
