--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "angular-animate": "^1.6.1",
     "angular-aria": "^1.6.1",
     "angular-cookies": "^1.6.1",
+    "angular-datetime-input": "^5.0.0",
     "angular-material": "^1.1.1",
     "angular-material-data-table": "^0.10.10",
     "angular-ui-router": "^1.0.0-rc.1"
